@@ -12,4 +12,5 @@ pm_to_blib*
 cover_db
 pod2htm*.tmp
 WWW-Postmark-*
-*.cache
+.build*
+MYMETA.*
