@@ -1,1 +1,17 @@
-.gitignore
+^\.gitignore$
+^blib/.*$
+^inc/.*$
+^Makefile$
+^Makefile\.old$
+^pm_to_blib$
+^Build$
+^Build\.bat$
+^_build\.*$
+^pm_to_blib.+$
+^.+\.tar\.gz$
+^\.lwpcookies$
+^cover_db$
+^pod2htm.*\.tmp$
+^WWW-Postmark-.*$
+^\.build.*$
+^MYMETA\..+$
