@@ -17,9 +17,8 @@ DESCRIPTION
     The WWW::Postmark module provides a simple API for the Postmark web
     service, that provides email sending facilities for web applications.
     Postmark is located at <http://postmarkapp.com>. It is a paid service
-    that charges according the amount of emails you send (right now first
-    1,000 emails are free), and requires signing up in order to receive an
-    API token.
+    that charges according the amount of emails you send, and requires
+    signing up in order to receive an API token.
 
     You can send emails either through HTTP or HTTPS with SSL encryption.
     You can send your emails to multiple recipients at once (but there's a
@@ -36,12 +35,20 @@ DESCRIPTION
     The token is 'POSTMARK_API_TEST', and you can use it for testing
     purposes (the tests in this distribution use this token).
 
+    Besides sending emails, this module also provides support for Postmark's
+    spam score API, which allows you to get a SpamAssassin report for an
+    email message. See documentation for the "spam_score()" method for more
+    info.
+
 METHODS
-  new( $api_token, [$use_ssl] )
+  new( [ $api_token, $use_ssl] )
     Creates a new instance of this class, with a Postmark API token that
     you've received from the Postmark app. By default, requests are made
     through HTTP; if you want to send them with SSL encryption, pass a true
     value for $use_ssl.
+
+    If you do not provide an API token, you will only be able to use
+    Postmark's spam score API (you will not be able to send emails).
 
   send( from => 'you@mail.com', to => 'them@mail.com', subject => 
 'An email message', body => $message_body, [ cc => 'someone@mail.com',
@@ -79,6 +86,20 @@ reply_to => 'do-not-reply@mail.com' ] )
         '</html>'. This module will look for these tags in order to find out
         whether you're sending a text message or an HTML message.
 
+        Since version 0.3, however, you can explicitly specify the type of
+        your message, and also send both plain text and HTML. To do so, use
+        the "html" and/or "text" attributes. Their presence will override
+        "body".
+
+    *   html
+
+        Instead of using "body" you can also specify the HTML content
+        directly.
+
+    *   text
+
+        ... or the plain text part of the email.
+
     You can optionally supply the following parameters as well:
 
     *   cc, bcc
@@ -96,6 +117,24 @@ reply_to => 'do-not-reply@mail.com' ] )
         Will force recipients of your email to send their replies to this
         mail address when replying to your email.
 
+  spam_score( $raw_email, [ $options ] )
+    Use Postmark's SpamAssassin API to determine the spam score of an email
+    message. You need to provide the raw email text to this method, with all
+    headers intact. If $options is 'long' (the default), this method will
+    return a hash-ref with a 'report' key, containing the full SpamAssasin
+    report, and a 'score' key, containing the spam score. If $options is
+    'short', only the spam score will be returned (directly, not in a
+    hash-ref).
+
+    If the API returns an error, this method will croak.
+
+    Note that the SpamAssassin API is currently HTTP only, there is no HTTPS
+    interface, so the "use_ssl" option to the "new()" method is ignored
+    here.
+
+    For more information about this API, go to
+    <http://spamcheck.postmarkapp.com>.
+
 INTERNAL METHODS
     The following methods are only to be used internally.
 
@@ -104,6 +143,9 @@ INTERNAL METHODS
   _analyze_response( $res )
 AUTHOR
     Ido Perlmuter, "<ido at ido50 dot net>"
+
+ACKNOWLEDGMENTS
+    Ask Bjørn Hansen, for submitting a patch.
 
 BUGS
     Please report any bugs or feature requests to "bug-www-postmark at
