@@ -1,7 +1,7 @@
 name    = WWW-Postmark
-version = 0.2
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
+copyright_year   = 2011
 
 [@IDOPEREL]
