@@ -3,8 +3,7 @@
 use Test::More tests => 1;
 
 BEGIN {
-    use_ok( 'WWW::Postmark' ) || print "Bail out!
-";
+	use_ok( 'WWW::Postmark' ) || print "Bail out!\n";
 }
 
 diag( "Testing WWW::Postmark $WWW::Postmark::VERSION, Perl $], $^X" );
